bad/assign_field_bool_of_field_int.example_compiler_output
ERROR
[1mbad/assign_field_bool_of_field_int.lat:10:16: [1;31merror: [0;1massigning to `boolean` from incompatible type `int`[m
	(new D).c.fld = 42;
	              [1;32m^[m
